--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "echo \"No tests implemented yet\" && exit 1"
+    "test": "echo \"Error: no test specified !!\""
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
